tests/cases/errors/compile_fun_no_name.lox
// A function declaration must have an identifier for its name.
// expect compile error: Expect function name
fun () {}
